apps/plex/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/plex/config"
            server: 192.168.1.2
        # - name: config
        #   iscsi:
        #     targetPortal: 192.168.1.2:3260
        #     iqn: iqn.2004-04.com.qnap:ts-453bmini:iscsi.cygnus.0bed79
        #     lun: 0
        #     fsType: ext4
        #     readOnly: false
        - name: persistent-data
          nfs:
            path: "/k8s-volumes/persistent/plex/data"
            server: 192.168.1.2
        - name: ephemeral-data
          nfs:
            path: "/k8s-volumes/ephemeral/plex/data"
            server: 192.168.1.2
      hostNetwork: true
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.29.1
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 32400
              name: web
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 32469
              name: dlna-tcp
              protocol: TCP
            - containerPort: 5353
              name: bonjour
              protocol: UDP
            - containerPort: 8324
              name: companion
              protocol: TCP
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: persistent-data
              mountPath: /persistent-data
              readOnly: true
            - name: ephemeral-data
              mountPath: /ephemeral-data
              readOnly: true
